--- a/views/about.mustache
+++ b/views/about.mustache
@@ -11,19 +11,18 @@
   <div class="max-w-6xl mx-auto px-4">
     <div class="flex justify-between items-center">
       <div>
-        <!-- Website Logo -->
+        <!-- MentorMeU Logo -->
         <a href="#" class="flex items-center py-4 px-2">
           <span class="font-semibold text-gray-500 text-lg">MentorMeU</span>
         </a>
       </div>
  
-      <!-- Secondary Navbar items -->
       <div class="md:flex hidden items-center space-x-3">
         <a href="/auth/login" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-indigo-500 hover:text-white transition duration-300">Log In</a>
         <a href="/auth/signup" class="py-2 px-2 font-medium text-white bg-indigo-500 rounded hover:bg-indigo-400 transition duration-300">Sign Up</a>
       </div>
 
-      <!-- Mobile menu button -->
+
       <div class="md:hidden flex items-center">
         <button class="outline-none mobile-menu-button">
           <svg class="w-6 h-6 text-gray-500 hover:text-indigo-500" 
@@ -43,7 +42,6 @@
 <!-- mobile menu -->
 <div class="md:hidden hidden mobile-menu">
   <ul class="">
-    <!-- Add Login and Sign Up links here -->
     <li><a href="/auth/login" class="block text-sm px-2 py-4 hover:bg-indigo-500 transition duration-300">Login</a></li>
     <li><a href="/auth/signup" class="block text-sm px-2 py-4 hover:bg-indigo-500 transition duration-300">Sign Up</a></li>
   </ul>
