--- a/views/students/mentors.mustache
+++ b/views/students/mentors.mustache
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <!-- Adding Font Awesome CDN for icons -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        /* Additional styling can go here */
+        
         .sidebar-link:hover {
             background-color: #eff6ff;
             padding-left: 1rem;
-            border-radius: 0.375rem; /* 6px */
+            border-radius: 0.375rem; 
         }
-        /* Footer stick to bottom */
+       
         .sticky-footer-container {
             display: flex;
             flex-direction: column;
@@ -23,7 +23,7 @@
         .content-grow {
             flex-grow: 1;
         }
-        /* Collapsible sidebar styles */
+       
         #menu-toggle:checked + #menu {
             display: block;
         }
@@ -34,7 +34,7 @@
 <div class="sticky-footer-container p-3 md:pl-6">
 
 
-    <!-- Header with Menu Toggle for small screens -->
+    
     <header class="bg-white shadow-md p-4 flex justify-between items-center md:hidden">
         <div class="text-2xl font-semibold text-blue-700">MentorMeU</div>
         <label for="menu-toggle" class="cursor-pointer">
@@ -45,7 +45,7 @@
 
     <div class="flex flex-1 overflow-hidden">
 
-        <!-- Sidebar section -->
+       
         <div class="bg-white rounded-lg shadow-md p-4 w-64 md:w-1/6 mb-5 md:mb-0 mr-4 hidden md:block">
           
         <div class="text-2xl font-semibold text-blue-700 mb-6">MentorMeU</div>
@@ -102,10 +102,10 @@
         </div>
 
 
-        <!-- Right section -->
+        
         <div class="flex-1 overflow-auto">
 
-            <!-- Welcome hero section -->
+            
             <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
                 <h2 class="text-xl font-semibold">Welcome Roselyne Abdalla Osundwa</h2>
             </div>
