--- a/views/admin/opportunities.mustache
+++ b/views/admin/opportunities.mustache
@@ -166,7 +166,7 @@
                                                 <i class="fas fa-edit"></i>
                                             </a>
                                             <!-- Delete button -->
-                                            <form action="/admin/opportunity/{{_id}}/delete?_method=DELETE" method="post" onsubmit="return confirm('Are you sure you want to delete this opportunity?');">
+                                            <form action="/admin/opportunities/{{_id}}/delete?_method=DELETE" method="post" onsubmit="return confirm('Are you sure you want to delete this opportunity?');">
                                                 <input type="hidden" name="_method" value="delete">
                                                 <button type="submit" class="text-red-600 hover:text-red-900 focus:outline-none">
                                                     <i class="fas fa-trash"></i> Delete
