--- a/views/admin/dashboard.mustache
+++ b/views/admin/dashboard.mustache
@@ -123,15 +123,14 @@
                 </ul>
             </div>
 
-            <div class="flex-1 overflow-auto">
+           <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
 
 
-                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-                </div>
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
 
-
-                <div class="bg-white rounded-lg shadow-md p-6 mb-6">
+<div class="bg-white rounded-lg shadow-md p-6 mb-6">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                         <!-- students -->
                         <div
