--- a/views/admin/mentor.mustache
+++ b/views/admin/mentor.mustache
@@ -127,18 +127,15 @@
             </div>
 
 
-            <div class="flex-1 overflow-auto">
+           <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
 
 
 
-                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-                </div>
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
 
-
-
-
-                <div class="container mx-auto px-4 sm:px-8">
+ <div class="container mx-auto px-4 sm:px-8">
                     <div class="py-8">
                         <div class="flex flex-col sm:flex-row justify-between items-center">
                             <h2 class="text-lg sm:text-2xl font-semibold leading-tight mb-4 sm:mb-0">Mentors</h2>
