--- a/views/admin/mentor_details.mustache
+++ b/views/admin/mentor_details.mustache
@@ -155,10 +155,12 @@
           </ul>
         </div>
 
-        <div class="flex-1 overflow-auto">
-          <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-            <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-          </div>
+             <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
+
+
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
 
           <div class="container mx-auto my-6 p-4 sm:my-10 sm:p-6 max-w-2xl">
             <div
