--- a/views/admin/new_mentor.mustache
+++ b/views/admin/new_mentor.mustache
@@ -128,14 +128,10 @@
             </div>
 
 
-            <div class="content-grow overflow-auto">
-
-
-
-                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-                </div>
-
+           <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
 
                 <div class="container mx-auto px-4 sm:px-0 max-w-3xl mt-10">
                     <div class="bg-white p-4 sm:p-8 border border-gray-200 rounded-lg shadow-lg">
