--- a/views/admin/new_student.mustache
+++ b/views/admin/new_student.mustache
@@ -127,15 +127,10 @@
                 </ul>
             </div>
 
-
-            <div class="content-grow overflow-auto">
-
-
-
-                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-                </div>
-
+           <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
 
                 <div class="container mx-auto px-4 sm:px-0 max-w-3xl mt-10">
                     <div class="bg-white p-4 sm:p-8 border border-gray-200 rounded-lg shadow-lg">
@@ -193,16 +188,17 @@
                                 </div>
                             </div>
 
-                            <div class="flex flex-col sm:flex-row justify-between items-center space-y-2 sm:space-y-0">
-                                <button type="submit"
-                                    class="w-full sm:w-auto px-3 sm:px-6 py-2 sm:py-3 border border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white text-xs sm:text-sm leading-6 font-medium rounded-md focus:outline-none focus:border-blue-700 focus:shadow-outline-blue active:bg-blue-700 transition duration-150 ease-in-out">
-                                    Add Student
-                                </button>
-                                <a href="/admin/students"
-                                    class="w-full sm:w-auto text-center sm:text-left text-blue-600 hover:text-blue-800 transition duration-150 ease-in-out text-xs sm:text-sm">
-                                    Cancel
-                                </a>
-                            </div>
+                           <div class="flex flex-col sm:flex-row justify-between items-center space-y-2 sm:space-y-0">
+    <button type="submit"
+        class="w-full sm:w-auto px-3 sm:px-6 py-2 sm:py-3 border border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white text-xs sm:text-sm leading-6 font-medium rounded-md focus:outline-none focus:border-blue-700 focus:shadow-outline-blue active:bg-blue-700 transition duration-150 ease-in-out">
+        Add Student
+    </button>
+    <a href="/admin/students"
+        class="w-full sm:w-auto text-center sm:text-left text-blue-600 hover:text-blue-800 transition duration-150 ease-in-out text-xs sm:text-sm">
+        Cancel
+    </a>
+</div>
+
 
                         </form>
                     </div>
