--- a/views/admin/opportunities.mustache
+++ b/views/admin/opportunities.mustache
@@ -129,13 +129,14 @@
 
 
 
-            <div class="flex-1 overflow-auto">
+           <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
 
 
 
-                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-                </div>
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
+
 
 
                 <!-- Opportunities Table Section -->
