--- a/views/students/my_opportunities.mustache
+++ b/views/students/my_opportunities.mustache
@@ -118,10 +118,11 @@
             </div>
 
 
-            <div class="flex-1 overflow-auto">
-                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
-                </div>
+           <div class="flex-1 mt-6 lg:mt-0 overflow-auto">
+<div class="hidden sm:block bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
+</div>
+
 
 
 
